<!--
  ~ Copyright (c) 2014 Vitaliy Lim <lim.vitaliy@gmail.com>
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in
  ~ all copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
  ~ THE SOFTWARE.
  -->

<resources>
    <string name="ss_app_name">Sabbath School</string>
    <string name="ss_loading">Loading</string>
    <string name="ss_downloading">Downloading latest quarterly</string>
    <string name="ss_downloading_error">Error downloading</string>
    <string name="ss_retry">Retry</string>

    <string name="ss_notification_read_lesson">Read Lesson</string>
    <string name="ss_notification_share_lesson">Share Lesson</string>

    <string name="ss_navigation_menu_open">Open Menu</string>
    <string name="ss_navigation_menu_close">Close Menu</string>

    <string name="ss_menu_lesson">Lesson</string>

    <string-array name="ss_tabs">
        <item>Saturday</item>
        <item>Sunday</item>
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
    </string-array>

    <string name="ss_menu_header_indicator_more">&#xe08c;</string>
    <string name="ss_menu_header_indicator_less">&#xe08b;</string>

    <string name="ss_menu_misc_settings_icon">&#xe145;</string>
    <string name="ss_menu_misc_settings_title">Settings</string>

    <string name="ss_menu_misc_about_icon">&#xe0bf;</string>
    <string name="ss_menu_misc_about_title">About</string>

    <string name="ss_webview_menu_highlight">Highlight</string>
    <string name="ss_webview_menu_search">Search</string>
    <string name="ss_webview_menu_copy">Copy</string>
    <string name="ss_webview_menu_copied">Copied</string>
    <string name="ss_webview_menu_share">Share</string>
    <string name="ss_webview_menu_share_text_to">Share selection to</string>
    <string name="ss_webview_menu_remove_highlight">Remove Highlight</string>

    <string name="ss_bible_verse_activity_title">Bible Verse</string>

    <string name="ss_setings">Settings</string>
    <string name="ss_settings_general">General</string>
    <string name="ss_settings_text_size">Text Size</string>
    <string name="ss_settings_ken_burns">Ken Burns Effect</string>
    <string name="ss_settings_ken_burns_summary">Floating featured image on the main screen</string>
    <string name="ss_settings_lesson_language">Lesson Language</string>
    <string name="ss_settings_reading_mode">Reading Mode</string>
    <string name="ss_settings_notification_enabled">Daily Notification</string>
    <string name="ss_settings_notification_enabled_summary">Check to enable daily notification about sabbath school lesson</string>
    <string name="ss_settings_notification_time">Notification Time</string>

    <string name="ss_settings_about">About</string>
    <string name="ss_settings_open_source_title">Open Source Licenses</string>
    <string name="ss_settings_open_source_summary">License details for open source software</string>
    <string name="ss_settings_website">Website</string>
    <string name="ss_settings_website_intent">http://vitalikl.github.io/ss</string>
    <string name="ss_settings_facebook_page">Facebook Page</string>
    <string name="ss_settings_facebook_page_intent">http://facebook.com/shabbatschool</string>

    <string name="ss_settings_version">App Version</string>

    <string name="ss_about">About</string>
    <string name="ss_about_love_your_neighbor">ואהבת לרעך כמוך</string>
    <string name="ss_about_menu_instagram_icon">&#xf16d;</string>
    <string name="ss_about_menu_instagram_title">\@v1talique</string>

    <string name="ss_about_menu_twitter_icon">&#xf099;</string>
    <string name="ss_about_menu_twitter_title">\@vitalik_l</string>

    <string name="ss_about_menu_facebook_icon">&#xf09a;</string>
    <string name="ss_about_menu_facebook_title">Facebook page</string>

    <string name="ss_about_menu_photo_credits_icon">&#xf16d;</string>
    <string name="ss_about_menu_photo_credits_title">Photo Credits \@asimsness</string>

    <string name="rate_dialog_title">Rate Sabbath School</string>
    <string name="rate_dialog_message">If you like Sabbath School, would you mind taking a moment to rate it? Thanks for your support!</string>
    <string name="rate_dialog_ok">Rate It</string>
    <string name="rate_dialog_cancel">Later</string>
    <string name="rate_dialog_no">No</string>
</resources>
