<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2015 Vitaliy Lim <lim.vitaliy@gmail.com>
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in
  ~ all copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
  ~ THE SOFTWARE.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/ss_settings_general">
        <com.cryart.sabbathschool.util.SSListPreferenceCompat
            android:key="ss_settings_text_size"
            android:title="@string/ss_settings_text_size"
            android:summary="%s"
            android:defaultValue="medium.css"
            android:entries="@array/ss_settings_text_size_entries"
            android:entryValues="@array/ss_settings_text_size_values" />

        <CheckBoxPreference
            android:key="ss_settings_ken_burns_effect"
            android:title="Ken Burns Effect"
            android:summary="Floating featured image on the main screen"
            android:defaultValue="true" />

        <com.cryart.sabbathschool.util.SSListPreferenceCompat
            android:key="ss_settings_lesson_language"
            android:title="@string/ss_settings_lesson_language"
            android:summary="%s"
            android:entries="@array/ss_settings_lesson_language_entries"
            android:entryValues="@array/ss_settings_lesson_language_values" />

        <com.cryart.sabbathschool.util.SSListPreferenceCompat
            android:key="ss_settings_reading_mode"
            android:title="@string/ss_settings_reading_mode"
            android:summary="%s"
            android:defaultValue="style_normal.css"
            android:entries="@array/ss_settings_reading_mode_entries"
            android:entryValues="@array/ss_settings_reading_mode_values" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/ss_settings_about">
        <Preference
            android:title="@string/ss_settings_open_source_title"
            android:summary="@string/ss_settings_open_source_summary"
            android:persistent="false"
            android:selectable="true">
            <intent
                android:action="com.postbeyond.postbeyond.ui.activity.SSSettingsActivity.SSOpenSourceNoticeActivity" />
        </Preference>

        <Preference
            android:title="@string/ss_settings_website"
            android:summary="@string/ss_settings_website_intent"
            android:persistent="false"
            android:selectable="true">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/ss_settings_website_intent" />
        </Preference>
    </PreferenceCategory>
</PreferenceScreen>