<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2015 Vitaliy Lim <lim.vitaliy@gmail.com>
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in
  ~ all copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
  ~ THE SOFTWARE.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/ss_webview_menu_highlight"
        android:icon="@drawable/ss_ic_border_color_white_24dp"
        android:orderInCategory="1"
        android:showAsAction="always|withText"
        android:title="@string/ss_webview_menu_highlight"/>

    <item
        android:id="@+id/ss_webview_menu_highlight_remove"
        android:icon="@drawable/ss_ic_format_color_reset_white_24dp"
        android:orderInCategory="2"
        android:showAsAction="always|withText"
        android:title="@string/ss_webview_menu_remove_highlight" />

    <item
        android:id="@+id/ss_webview_menu_share"
        android:showAsAction="always"
        android:icon="@drawable/ss_ic_share_white_24dp"
        android:orderInCategory="3"
        android:title="@string/ss_webview_menu_share" />

    <item
        android:id="@+id/ss_webview_menu_copy"
        android:icon="@drawable/ss_ic_content_copy_white_24dp"
        android:orderInCategory="4"
        android:title="@string/ss_webview_menu_copy" />

    <item
        android:id="@+id/ss_webview_menu_search"
        android:icon="@drawable/ss_ic_search_white_24dp"
        android:orderInCategory="5"
        android:title="@string/ss_webview_menu_search" />
</menu>