<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2014 Vitaliy Lim <lim.vitaliy@gmail.com>
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in
  ~ all copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
  ~ THE SOFTWARE.
  -->

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@drawable/ss_loading_splash"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/ss_splash_logo"
        android:background="@drawable/ss_app_icon_white"
        android:layout_centerHorizontal="true"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"

        android:layout_centerInParent="true" />

    <RelativeLayout
        android:id="@+id/ss_loading_controls"
        android:layout_below="@+id/ss_splash_logo"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/ss_loading_controls_top_margin">

        <ProgressBar
            android:id="@+id/ss_loading_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/ss_loading_spinner_top_margin"
            style="?android:attr/progressBarStyleSmall" />

        <Button
            android:id="@+id/ss_loading_retry"
            android:layout_centerInParent="true"
            android:layout_centerHorizontal="true"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:paddingBottom="@dimen/ss_loading_retry_bottom_padding"
            android:paddingEnd="@dimen/ss_loading_retry_right_padding"
            android:paddingLeft="@dimen/ss_loading_retry_left_padding"
            android:paddingRight="@dimen/ss_loading_retry_right_padding"
            android:paddingTop="@dimen/ss_loading_retry_top_padding"
            android:text="@string/ss_retry"
            android:textAllCaps="true"
            android:textColor="@color/ss_loading_retry_text_color"
            android:textSize="@dimen/ss_loading_retry_text_size"
            android:visibility="invisible"
            style="?android:attr/borderlessButtonStyle" />
    </RelativeLayout>

    <TextView
        android:id="@+id/ss_loading_explainer"
        android:layout_below="@id/ss_loading_controls"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/ss_loading_explainer_top_margin"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:textColor="@color/ss_loading_explainer_text_color"
        android:textSize="@dimen/ss_loading_explainer_text_size"
        android:text="@string/ss_loading" />

    <TextView
        android:id="@+id/ss_app_title"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/ss_loading_app_title_bottom_margin"
        android:layout_width="wrap_content"
        android:text="@string/ss_app_name"
        android:textAllCaps="true"
        android:textColor="@color/ss_loading_app_title_text_color"
        android:textSize="@dimen/ss_loading_app_title_text_size" />
</RelativeLayout>